# f22-keyboard

./: .gitignore  CMakeLists.txt  Kconfig  README.md  build.yaml
.github/workflows/: build.yml
boards/custom/rp2354_split/: Kconfig.defconfig  Kconfig.rp2354_split_left  Kconfig.rp2354_split_right  board.cmake  board.yml  rp2354_split-layouts.dtsi  rp2354_split-pinctrl.dtsi  rp2354_split.dtsi  rp2354_split.zmk.yml  rp2354_split_left_rp2350b_m33_zmk.dts  rp2354_split_left_rp2350b_m33_zmk_defconfig  rp2354_split_right_rp2350b_m33_zmk.dts  rp2354_split_right_rp2350b_m33_zmk_defconfig
config/: info.json  keymap.json  left_blink.conf  left_blink.overlay  left_boot_led.overlay  left_hwinfo_blink.conf  left_hwinfo_blink.overlay  left_uart_logging.conf  left_uart_logging.overlay  left_usb_app_focus_ladder.conf  left_usb_app_ladder.conf  left_usb_armed.conf  left_usb_attach_gate.conf  left_usb_driver_blink.conf  left_usb_driver_blink.overlay  left_usb_enable_gate.conf  left_usb_init_bracket.conf  left_usb_init_bracket.overlay  left_usb_init_ladder.conf  left_usb_init_ladder.overlay  left_usb_only.conf  left_usb_raw.conf  left_usb_state.conf  rp2354_split.conf  rp2354_split.keymap
docs/: zmk.md
dts/arm/raspberrypi/rpi_pico/: rp2350b.dtsi
soc/custom/rp2350b/: CMakeLists.txt  Kconfig  Kconfig.soc  soc.yml
src/: debug_probe.c  split_peripheral_hid_indicator_led.c  usb_serial_number.c
zephyr/: module.yml
